trying to fix the results in search container to be from bottom up on mobile

--- a/main/static/css/main/yb_containers.css
+++ b/main/static/css/main/yb_containers.css
@@ -505,7 +505,7 @@
         position: absolute;
         display: flex;
         flex-direction: column-reverse;
-        bottom: 0px;
+        bottom: 0vh;
     }
     
 }
